# flask-fastapi

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
flask_fastapi/: .flask_fastapi.py.swp  __init__.py  flask_fastapi.py  swaggerui.html
src/flask_fastapi/: __init__.py  constants.py  exceptions.py  flask_fastapi.py  json.py  schema.py
src/flask_fastapi/templates/: redoc.html  swaggerui.html
tests/: test_flask_fastapi.py
