[tool.poetry]
name = "flask-fastapi"
version = "0.0.1"
description = "Extended version of Flask to offer FastAPI inspired functionality."
authors = ["Matt Wilson <matt@callmematt.com>"]
readme = "README.md"
packages = [{include="flask_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
pydantic = "^2.7.3"
orjson = "^3.10.3"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
