[metadata]
name = Flask-FastAPI
version = attr: flask_fastapi.__version__
author = Matt Wilson
author_email = matt@onva.io
description = FastAPI inspired extension of Flask for APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ironslob/flask-fastapi/
project_urls =
    Issue Tracker = https://github.com/ironslob/flask-fastapi/issues
    Source Code = https://github.com/pallets/flask/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = true

[options.packages.find]
where = src
